# nova-flight-ts

./: .gitignore  README.md  build.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/css/: main.css  multi-game.css  setting.css  start.css  statistic.css  tech.css
public/data/: tech-data.json
public/nova-flight/: sounds.json
resources/nova-flight/: audios.json  sounds.json  tips.json
src/: Camera.ts  DataLoader.ts  Game.ts  Input.ts  NovaFlightServer.ts  World.ts  configs.ts  lib.ts  main.ts
src-node/: NodeNetworkServer.ts  package-lock.json  package.json  tsconfig.json
src-node/src/: NodeServer.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file.rs  lib.rs  window.rs  wss.rs
src-tauri/src/network/: cmd.rs  mod.rs  protocol.rs  session.rs  states.rs  util.rs  wss.rs
src/apis/: IEvents.ts  IExplosionOpts.ts  IStage.ts  IStarLayer.ts  ITech.ts  ITimer.ts  IUIInfo.ts  Saves.ts  errors.ts  registry.ts  startup.ts  types.ts
src/block/: Block.ts  BlockSettings.ts  Blocks.ts
src/brigadier/: ArgumentBuilder.ts  ArgumentCommandNode.ts  ArgumentType.ts  Command.ts  CommandDispatcher.ts  CommandNode.ts  CommandNodeBuilder.ts  LiteralBuilder.ts  LiteralCommandNode.ts  ParseResults.ts  RootCommandNode.ts  StringRange.ts  StringReader.ts
src/client/: ClientCommand.ts  ClientCommandManager.ts  ClientDB.ts  ClientDefaultEvents.ts  ClientInventory.ts  ClientMultiGameManger.ts  ClientSavesManager.ts  (+5 more)
test-src/: debug.ts  test.ts
(+908 files in other folders)
