[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["YXLumen"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[profile.dev]
incremental = true # 以较小的步骤编译二进制文件。

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好地优化
lto = true # 启用链接时优化
opt-level = 3 # 最高优化
panic = "abort" # 通过禁用 panic 处理程序来提高性能。
strip = true # 确保移除调试符号

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
#serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.4", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
bytes = "1.10.1"
dashmap = "6.1.0"
rand = "0.8.5"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
